# V3FIT

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci_doxygen.yaml  ci_test.yaml  ci_test_master.yaml
Sources/: CMakeLists.txt  bivariate.f  combination.f  commandline_parser.f  data_parameters.f  ece.f  ece_dot.f  emission.f  equilibrium.f  extcurz.f  feedback.f  guassian_process.f  intpol.f  ipch_dot.f  limiter.f  limiter_grid.f  limiter_iso_T.f  magnetic.f  model.f  model_state.f  mse.f  mse_dot.f  pprofile_T.f  prior_gaussian.f  reconstruction.f  siesta_context.f  siesta_equilibrium.f  signal.f  signal_dot.f  sxrch_dot.f  sxrem.f  sxrem_ratio.f  sxrem_ratio_dot.f  thomson.f  thscte_dot.f  v3fit_context.f  v3fit_input.f  v3fit_params.f  v3fita.f  vacuum_equilibrium.f  (+3 more)
Testing/: CMakeLists.txt
Testing/test_utilities/: check_correlation_matrix.py  check_jac_value.py  check_jacobian_iter.py  check_param_constraint_types.py  (+4 more)
Testing/tests/: CMakeLists.txt
Testing/tests/aphi_test/: CMakeLists.txt  input.test.v3fit  input.test.vmec
Testing/tests/diagnostic_rotation_test/: CMakeLists.txt  coils.null  diagnostic_rot.dot  input.test.v3fit  input.unrot  intpol_rot.dot  sxrem_rot.dot  thomson_rot.dot  v3rfun.in
Testing/tests/equilibrium_reset_free_boundary_test/: CMakeLists.txt  input.test.v3fit
Testing/tests/equilibrium_reset_test/: CMakeLists.txt  input.test.v3fit  input.test.vmec
Testing/tests/equilibrium_task_test/: CMakeLists.txt  input.test.v3fit
Testing/tests/lasym_boundary/: CMakeLists.txt  input.test.v3fit  input.test.vmec
Testing/tests/limiter_test/: CMakeLists.txt  coils.simple_kp36  input.grid.v3fit  input.iso.v3fit  input.vmec
Testing/tests/multigrid_test/: CMakeLists.txt  input.test.vmec
Testing/tests/ne_pressure_test/: CMakeLists.txt  input.test.v3fit
Testing/tests/param_constraints_test/: CMakeLists.txt  input.test.v3fit
Testing/tests/preconditioner_test/: CMakeLists.txt  input.test.v3fit  input.test.vmec  magnetic.dot
Testing/tests/reconstruction_task_seg_step_test/: CMakeLists.txt  input.test.v3fit
Testing/tests/reconstruction_task_sl_step_test/: CMakeLists.txt  input.test.v3fit
Testing/tests/reconstruction_task_test/: CMakeLists.txt  input.test.v3fit  v3rfun.in
Testing/tests/siesta_recon_asym_test/: CMakeLists.txt  input.test.v3fit  input.test.vmec  siesta.jcf  thomson.dot
Testing/tests/siesta_recon_test/: CMakeLists.txt  input.test.v3fit  input.test.vmec  siesta.jcf  thomson.dot
Testing/tests/te_pressure_test/: CMakeLists.txt  input.test.v3fit
Testing/tests/unit_tests/: CMakeLists.txt
Testing/tests/v3post_lasym_test/: CMakeLists.txt  input.test.v3fit  input.test.vmec
Testing/tests/v3post_task_test/: CMakeLists.txt  input.test.v3fit
Testing/tests/z_offset_test/: CMakeLists.txt  input.test.v3fit
