add_subdirectory (unit_tests)
add_subdirectory (equilibrium_task_test)
add_subdirectory (v3post_task_test)
add_subdirectory (te_pressure_test)
add_subdirectory (ne_pressure_test)
add_subdirectory (reconstruction_task_test)
add_subdirectory (reconstruction_task_seg_step_test)
add_subdirectory (reconstruction_task_sl_step_test)
add_subdirectory (param_constraints_test)
add_subdirectory (diagnostic_rotation_test)
add_subdirectory (v3post_lasym_test)
add_subdirectory (z_offset_test)
add_subdirectory (equilibrium_reset_test)
add_subdirectory (equilibrium_reset_free_boundary_test)
add_subdirectory (multigrid_test)
add_subdirectory (aphi_test)
add_subdirectory (lasym_boundary)
add_subdirectory (preconditioner_test)
add_subdirectory (limiter_test)
add_subdirectory (siesta_recon_test)
